--- a/note.org
+++ b/note.org
@@ -152,54 +152,116 @@ int main() {
 inserter : set
 back_inserter push_back 同理front_inserter
 
-* partition
-完全使用二分法进行分区
-#include <algorithm>
-#include <iostream>
-#include <iterator>
-#include <vector>
-#include <forward_list>
+** partition
+
+// 三路归并
+
+ 完全使用二分法进行分区
+ #include <algorithm>
+ #include <iostream>
+ #include <iterator>
+ #include <vector>
+ #include <forward_list>
  
-template <class ForwardIt>
- void quicksort(ForwardIt first, ForwardIt last)
+ template <class ForwardIt>
+  void quicksort(ForwardIt first, ForwardIt last)
+  {
+     if(first == last) return;
+     auto pivot = *std::next(first, std::distance(first,last)/2);
+     ForwardIt middle1 = std::partition(first, last, 
+                          [pivot](const auto& em){ return em < pivot; });
+     ForwardIt middle2 = std::partition(middle1, last, 
+                          [pivot](const auto& em){ return !(pivot < em); });
+     quicksort(first, middle1);
+     quicksort(middle2, last);
+  }
+ 
+ int main()
  {
-    if(first == last) return;
-    auto pivot = *std::next(first, std::distance(first,last)/2);
-    ForwardIt middle1 = std::partition(first, last, 
-                         [pivot](const auto& em){ return em < pivot; });
-    ForwardIt middle2 = std::partition(middle1, last, 
-                         [pivot](const auto& em){ return !(pivot < em); });
-    quicksort(first, middle1);
-    quicksort(middle2, last);
+     std::vector<int> v = {0,1,2,3,4,5,6,7,8,9};
+     std::cout << "Original vector:\n    ";
+     for(int elem : v) std::cout << elem << ' ';
+ 
+     auto it = std::partition(v.begin(), v.end(), [](int i){return i % 2 == 0;});
+ 
+     std::cout << "\nPartitioned vector:\n    ";
+     std::copy(std::begin(v), it, std::ostream_iterator<int>(std::cout, " "));
+     std::cout << " * ";
+     std::copy(it, std::end(v), std::ostream_iterator<int>(std::cout, " "));
+ 
+     std::forward_list<int> fl = {1, 30, -4, 3, 5, -4, 1, 6, -8, 2, -5, 64, 1, 92};
+     std::cout << "\nUnsorted list:\n    ";
+     for(int n : fl) std::cout << n << ' ';
+     std::cout << '\n';  
+ 
+     quicksort(std::begin(fl), std::end(fl));
+     std::cout << "Sorted using quicksort:\n    ";
+     for(int fi : fl) std::cout << fi << ' ';
+     std::cout << '\n';
  }
- 
-int main()
-{
-    std::vector<int> v = {0,1,2,3,4,5,6,7,8,9};
-    std::cout << "Original vector:\n    ";
-    for(int elem : v) std::cout << elem << ' ';
- 
-    auto it = std::partition(v.begin(), v.end(), [](int i){return i % 2 == 0;});
- 
-    std::cout << "\nPartitioned vector:\n    ";
-    std::copy(std::begin(v), it, std::ostream_iterator<int>(std::cout, " "));
-    std::cout << " * ";
-    std::copy(it, std::end(v), std::ostream_iterator<int>(std::cout, " "));
- 
-    std::forward_list<int> fl = {1, 30, -4, 3, 5, -4, 1, 6, -8, 2, -5, 64, 1, 92};
-    std::cout << "\nUnsorted list:\n    ";
-    for(int n : fl) std::cout << n << ' ';
-    std::cout << '\n';  
- 
-    quicksort(std::begin(fl), std::end(fl));
-    std::cout << "Sorted using quicksort:\n    ";
-    for(int fi : fl) std::cout << fi << ' ';
-    std::cout << '\n';
-}
+
+ https://www.cs.princeton.edu/~rs/talks/QuicksortIsOptimal.pdf
+ Robert Sedgewick 快排还是要支持三路归并
 
 * permutation
 rotate(first, new_first, last)  默认左移
 shufle(range)
 next_permutation(range)
 
+* 二叉树的所有变种
+** 树的应用
+*** avl/rb/skip list
+llrb 实现 P46  代码更加简洁
 
+*** b+ b- 数据库方面 如何实现 -- 数据的并发控制协议/ 
+*** 字符串使用的 前缀树 后缀树  trie/suffix tree
+** 题目94
+1. 常见二叉树的(BST) 前/中/后 层次遍历(递归+非递归)
+2. 判断 是否合法的BST
+3. 统计树中节点个数
+4. 统计树高
+
+
+ 二叉树定义/ BST定义
+
+* rb-tree & hash
+1. rb-tree能够进行范围查询
+2. 如何在搜索树中进行  小于X的元素个数 或 找出 第k个元素
+   思路: (在树Node的定义中添加 number Feild统计左右子树+当前根节点的个数)
+4. 实现技巧: 插入函数 insert 应该有返回值(返回树调整后的树根)
+3. 树的Iterator的实现比较繁琐 (如何找出前一个(左子树的最大值)  和 后一个元素(右子树的最小值)-- 可能后一个是树根)
+   思路: 利用parent节点
+   
+   单单对于普通的BST 可能只需要parent节点
+   (e.g. 查找当前节点的上一个节点
+     1. 如果当前节点有左子树
+        找出左子树的最大值  findMax()
+     2. 无左子树   --> 当前节点为 最小值
+         y
+          \
+           t2
+          /
+         t1
+        /
+       cur
+       实际 BST就是排序好的数组 (y < cur < t1 < t2)
+       auto pa = cur->parent;
+       while (cur == pa->left) {
+           cur = pa;
+           pa = pa->parent;
+       }
+       cur = pa;   // 此时cur 是 y 节点
+
+   )
+
+   但是对于 RB等变种 可能需要考虑红节点的问题
+
+5. 如何处理重复元素
+   一种是不插入
+   另一种采用计数的方式(统计有多少个)  但是只有一份实体 共享
+   如果需要多个重复的实体(可以采用一个链表的结构 copy_on_write)的思路也可以
+
+6. 如何处理 LCA 树中查找最小公共祖先
+* 搜索结构
+** BST之类的变种 对整数或者实数的处理 时间固定
+** 但是字符串的比较 最差可能正比于其长度
