--- a/note.org
+++ b/note.org
@@ -265,3 +265,8 @@ llrb 实现 P46  代码更加简洁
 * 搜索结构
 ** BST之类的变种 对整数或者实数的处理 时间固定
 ** 但是字符串的比较 最差可能正比于其长度
+* 解题格式
+1. 注释三行
+  // 介绍题意
+  // topic: 知识点
+  // 关注那种解法
