--- a/note.org
+++ b/note.org
@@ -270,3 +270,11 @@ llrb 实现 P46  代码更加简洁
   // 介绍题意
   // topic: 知识点
   // 关注那种解法
+* TODO 注意事项
+** 2.28
+  1. 处理输入
+  2. 打印矩阵 顺时针 逆时针
+  3. two sum ...
+  4. pow 浮点数 / 整数幂次
+  5. ugly 纯粹数学题 还是算了
+  6. 把数组排成最小的数 a+b < b+a  自定义比较器
