--- a/note.org
+++ b/note.org
@@ -282,6 +282,34 @@ llrb 实现 P46  代码更加简洁
 * 搜索结构
 ** BST之类的变种 对整数或者实数的处理 时间固定
 ** 但是字符串的比较 最差可能正比于其长度
+* container's iterator type
+** inputIter read
+仅支持一遍 遍历range
+** outputIter write
+仅支持一遍 遍历range
+** ForwardIter r+w
+仅支持一遍 遍历range
+forward_list + unorderd_set/map
+** BidIter i-- i++
+支持多遍算法
+list + set + map
+** RandomIter i+n i-n
+vector + deque
+** adpter
+no iterator
+* stream iterator
+绑定到字符流或者文件流都是 不可重入的(定义了eof)
+主要配合使用 copy(range, ostream_iterator<T>{cout, ", "});
+** @TODO 如何处理输入的情况(简化算法题目)
+* string + stringstream + fstream + istream_iterator
+1. string 字节串()
+2. stringstream
+istreamstream.str() 返回一个string的拷贝 所以是一个临时对象
+{str} 接收一个std::string 拷贝进行构造
+@TODO 更多用来处理字符串 (如空格 数字的位数 等等)
+3. stream_iterator
+流迭代器 遇到方便的场景用下
+
 * TODO 注意事项
 ** 2.28
   1. 处理输入
